tree-sitter/grammar.js
    module: $ => repeat($._statement),

    // ---------------------------------------------------------------------
    // Statements
    // ---------------------------------------------------------------------

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // one or more simple statements on a logical line, terminated by a newline
    block_tailed_statement: $ => seq(
      optional(choice(
        seq(field('left', $._assign_lhs), '='),
        'return',
      )),
      field('value', alias($._block_anonymous_function, $.anonymous_function)),
    ),

    _block_anonymous_function: $ => seq(
      optional('async'),
      'def',
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._expression))),
      ':',
      field('body', $.block),
    ),

    // ---- simple statements ----------------------------------------------

    assignment: $ => prec.right(PREC.assign, seq(
      field('left', $._assign_lhs),
      '=',
      field('right', $._assign_rhs),
    )),

    augmented_assignment: $ => prec.right(PREC.assign, seq(
      field('left', $._assign_lhs),
      field('operator', choice(
        '+=', '-=', '*=', '/=', '//=', '%=', '**=',
        '>>=', '<<=', '>>>=', '&=', '^=', '|=',
      )),
      field('right', $._assign_rhs),
    )),

    _assign_lhs: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    _assign_rhs: $ => choice(
      $._expression,
      $.expression_list,
      $.yield,
    ),

    expression_list: $ => prec.right(seq(
      $._expression,
      choice(
        ',',
        seq(repeat1(seq(',', $._expression)), optional(',')),
      ),
    )),

    // Assignment targets (tuple/list destructuring). RapydScript supports
    // nested destructuring, e.g. `a, (b, c) = ...`, but NOT starred targets.
    pattern_list: $ => prec.right(seq(
      $.pattern,
      choice(
        ',',
        seq(repeat1(seq(',', $.pattern)), optional(',')),
      ),
    )),

    pattern: $ => choice(
      $.identifier,
      $.this,
      $.attribute,
      $.subscript,
      $.tuple_pattern,
      $.list_pattern,
    ),

    return_statement: $ => prec.right(seq(
      'return',
      optional(choice($._expression, $.expression_list)),
    )),

    delete_statement: $ => seq(
      'del',
      choice($._expression, $.expression_list),
    ),

    pass_statement: _ => 'pass',
    debugger_statement: _ => 'debugger',

    assert_statement: $ => prec.right(seq(
      'assert',
      $._expression,
      optional(seq(',', $._expression)),
    )),

    global_statement: $ => prec.right(seq('global', commaSep1($.identifier))),
    nonlocal_statement: $ => prec.right(seq('nonlocal', commaSep1($.identifier))),

    yield_statement: $ => $.yield,

    yield: $ => prec.right(seq(
      'yield',
      choice(
        seq('from', field('from', $._expression)),
        optional(choice($._expression, $.expression_list)),
      ),
    )),

    // ---- imports ---------------------------------------------------------

    import_statement: $ => prec.right(seq(
      'import',
      commaSep1(field('name', choice(
        $.dotted_name,
        $.aliased_import,
      ))),
    )),

    aliased_import: $ => seq(
      field('name', $.dotted_name),
      'as',
      field('alias', $.identifier),
    ),

    import_from_statement: $ => seq(
      'from',
      field('module_name', $.dotted_name),
      'import',
      choice(
        seq('(', $._import_list, ')'),
        $._import_list,
      ),
    ),

    _import_list: $ => prec.right(seq(
      commaSep1(field('name', choice(
        $.identifier,
        $.aliased_import_name,
      ))),
      optional(','),
    )),

    aliased_import_name: $ => seq(
      field('name', $.identifier),
      'as',
      field('alias', $.identifier),
    ),

    // `from __python__ import flag, no_flag` -- compiler scoped flags
    scoped_flag_statement: $ => seq(
      'from',
      '__python__',
      'import',
      choice(
        seq('(', $._flag_list, ')'),
        $._flag_list,
      ),
    ),

    _flag_list: $ => prec.right(seq(
      commaSep1(field('flag', $.identifier)),
      optional(','),
    )),

    dotted_name: $ => prec.left(1, sep1($.identifier, '.')),

    // ---- compound statements --------------------------------------------

    if_statement: $ => seq(
      'if',
      field('condition', $._expression),
      ':',
      field('consequence', $._suite),
      repeat(field('alternative', $.elif_clause)),
      optional(field('alternative', $.else_clause)),
    ),

    _for_target: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    // native JavaScript for loop:  for v'i = 0; i < n; i++':
    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    _parameters: $ => seq(
      commaSep1($._parameter),
      optional(','),
    ),

    default_parameter: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    typed_default_parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._expression),
      '=',
      field('value', $._expression),
    ),

    list_splat_parameter: $ => seq(
      '*',
      field('name', $.identifier),
      optional(seq(':', field('type', $._expression))),
    ),
    dictionary_splat_parameter: $ => seq(
      '**',
      field('name', $.identifier),
      optional(seq(':', field('type', $._expression))),
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      $.block,
    ),

    block: $ => seq(
      $._indent,
      repeat($._statement),
      $._dedent,
    ),

    // ---------------------------------------------------------------------
    // Expressions
    // ---------------------------------------------------------------------

    _expression: $ => choice(
      $._primary_expression,
      $.not_operator,
      $.boolean_operator,
      $.comparison_operator,
      $.binary_operator,
      $.unary_operator,
      $.conditional_expression,
      $.await,
      $.assignment,
      $.augmented_assignment,
    ),

    _primary_expression: $ => choice(
      $.identifier,
      $.this,
      $.true,
      $.false,
      $.none,
      $.number,
      $.string,
      $.concatenated_string,
      $.regex,
      $.verbatim,
      $.list,
      $.set,
      $.dictionary,
      $.tuple,
      $.parenthesized_expression,
      $.list_comprehension,
      $.set_comprehension,
      $.dictionary_comprehension,
      $.generator_expression,
      $.attribute,
      $.subscript,
      $.slice_call,
      $.call,
      $.new_expression,
      $.existential,
      $.anonymous_function,
    ),

    // ---- operators -------------------------------------------------------

    not_operator: $ => prec(PREC.not, seq(
      'not',
      field('argument', $._expression),
    )),

    boolean_operator: $ => choice(
      prec.left(PREC.and, seq(
        field('left', $._expression),
        field('operator', 'and'),
        field('right', $._expression),
      )),
      prec.left(PREC.or, seq(
        field('left', $._expression),
        field('operator', 'or'),
        field('right', $._expression),
      )),
    ),

    binary_operator: $ => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '@', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '^', PREC.bitwise_xor],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '<<', PREC.shift],
        [prec.left, '>>', PREC.shift],
        [prec.left, '>>>', PREC.shift],
      ];

      return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      ))));
    },

    unary_operator: $ => prec(PREC.unary, seq(
      field('operator', choice('+', '-', '~', 'typeof', 'void')),
      field('argument', $._expression),
    )),

    comparison_operator: $ => prec.left(PREC.compare, seq(
      $._expression,
      repeat1(seq(
        field('operator', choice(
          '<', '<=', '==', '===', '!=', '!==', '>=', '>',
          'in',
          seq('not', 'in'),
          'is',
          seq('is', 'not'),
          'instanceof',
        )),
        $._expression,
      )),
    )),

    // ternary conditional:  consequence if condition else alternative
    conditional_expression: $ => prec.right(PREC.conditional, seq(
      $._expression,
      'if',
      $._expression,
      'else',
      $._expression,
    )),

    // ---- postfix / primary chains ---------------------------------------

    attribute: $ => prec(PREC.member, seq(
      field('object', $._primary_expression),
      '.',
      field('attribute', $.identifier),
    )),

    subscript: $ => prec(PREC.member, seq(
      field('object', $._primary_expression),
      '[',
      field('subscript', choice($._expression, $.slice, $.expression_list)),
      ']',
    )),

    slice: $ => seq(
      optional($._expression),
      ':',
      optional($._expression),
      optional(seq(':', optional($._expression))),
    ),

    call: $ => prec(PREC.call, seq(
      field('function', $._primary_expression),
      field('arguments', $.argument_list),
    )),

    // A slice used as a call argument (delslice etc.) is just a subscript;
    // this alias keeps the primary-expression choice list explicit.
    argument_list: $ => seq(
      '(',
      optional(choice(
        // a bare generator expression as the sole argument: f(x for x in y)
        seq(field('body', $._expression), $._comprehension_clauses),
        seq(commaSep1($._argument), optional(',')),
      )),
      ')',
    ),

    _argument: $ => choice(
      $._expression,
      $.keyword_argument,
      $.list_splat_argument,
      $.dictionary_splat_argument,
    ),

    // In a call, `name=value` is always a keyword argument (never an
    // assignment expression); the higher precedence enforces that.
    keyword_argument: $ => prec(1, seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    )),

    list_splat_argument: $ => seq('*', $._expression),
    dictionary_splat_argument: $ => seq('**', $._expression),

    new_expression: $ => prec.right(PREC.call, seq(
      'new',
      field('constructor', $._primary_expression),
    )),

    // The existential operator `?`. It has four forms:
    //   a?         -- existence check (null-like test)
    //   a?.b       -- safe attribute access
    //   a?[i]      -- safe subscript
    //   a?()       -- safe call
    //   a ? b      -- fallback / default operator (use b if a is null-like)
    await: $ => prec(PREC.unary, seq('await', $._expression)),

    // ---- anonymous (lambda) functions -----------------------------------
    // The signature RapydScript feature: multi-line anonymous functions.

    // Anonymous function. RapydScript also allows an optional name on a
    // function *expression* (e.g. `x = def named(a): ...`).
    anonymous_function: $ => prec(PREC.lambda, seq(
      optional('async'),
      'def',
      optional(field('name', $.identifier)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._expression))),
      ':',
      field('body', $._anon_suite),
    )),

    // The body of an anonymous function. Unlike a statement-level suite, the
    // inline form is NOT terminated by a newline: an inline `def(): a; b`
    // appearing inside a container ends at the enclosing `,`/`}`/`)` (or the
    // outer statement's newline). Semicolons chain statements into the body.
    _anon_suite: $ => choice(
      $.block,
      alias($._inline_body, $.block),
    ),

    list: $ => seq(
      '[',
      optional(seq(commaSep1($._collection_element), optional(','))),
      ']',
    ),

    _collection_element: $ => choice(
      $._expression,
      $.list_splat_argument,
    ),

    parenthesized_expression: $ => prec(1, seq(
      '(',
      choice($._expression, $.yield),
      ')',
    )),

    _comprehension_clauses: $ => seq(
      $.for_in_clause,
      repeat(choice($.for_in_clause, $.if_clause)),
    ),

    for_in_clause: $ => seq(
      'for',
      field('left', $._for_target),
      'in',
      field('right', choice($._expression, $.expression_list)),
    ),

    concatenated_string: $ => prec.left(seq(
      $.string,
      repeat1($.string),
    )),

    this: _ => 'this',
    true: _ => 'True',
    false: _ => 'False',
    none: _ => 'None',

    // string with optional r/u/f/b modifiers (the `v` modifier denotes a
    // verbatim JavaScript literal and is handled separately). Interpolation
    // and escapes are not sub-tokenised; the whole literal is a single node.
    string: _ => token(seq(
      optional(/[rRuUfFbB]+/),
      choice(
        seq('"""', repeat(choice(/[^"\\]/, /\\(.|\n)/, /"[^"]/, /""[^"]/)), '"""'),
        seq("'''", repeat(choice(/[^'\\]/, /\\(.|\n)/, /'[^']/, /''[^']/)), "'''"),
        seq('"', repeat(choice(/[^"\\\n]/, /\\(.|\n)/)), '"'),
        seq("'", repeat(choice(/[^'\\\n]/, /\\(.|\n)/)), "'"),
      ),
    )),

    // verbatim JavaScript literal:  v'...'  v"..."  (optionally combined with
    // other string modifiers, e.g. rv'...'). At least one `v` is required.
    verbatim: _ => token(seq(
      /[rRuUfFbBvV]*[vV][rRuUfFbBvV]*/,
      choice(
        seq('"""', repeat(choice(/[^"\\]/, /\\(.|\n)/, /"[^"]/, /""[^"]/)), '"""'),
        seq("'''", repeat(choice(/[^'\\]/, /\\(.|\n)/, /'[^']/, /''[^']/)), "'''"),
        seq('"', repeat(choice(/[^"\\\n]/, /\\(.|\n)/)), '"'),
        seq("'", repeat(choice(/[^'\\\n]/, /\\(.|\n)/)), "'"),
      ),
    )),

    number: _ => {
      const hex = /0[xX][0-9a-fA-F]+/;
      const binary = /0[bB][01]+/;
      const octal = /0[oO][0-7]+/;
      const decimal = /(\d+\.?\d*|\.\d+)([eE][+-]?\d+)?/;
      return token(choice(hex, binary, octal, decimal));
    },

    identifier: _ => /[A-Za-z_$ª-￿][A-Za-z0-9_$ª-￿]*/,
